--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,11 @@
 }
 
 a {
-  text-decoration: inherit;
+  /* text-decoration: inherit; */
 }
 
 a:hover {
-  text-decoration: inherit; 
+  /* text-decoration: inherit; */
 }
 
 body {
